--- a/KokkuEngine/Config/Localization/KokkuEngineLocalization.ini
+++ b/KokkuEngine/Config/Localization/KokkuEngineLocalization.ini
@@ -1,18 +1,16 @@
 [CommonSettings]
-SourcePath=../../../../Github/Portfolio/KokkuEngine/Content/Localization/Game
-DestinationPath=../../../../Github/Portfolio/KokkuEngine/Content/Localization/Game
+SourcePath=%GAMEDIR%Content/Localization/Game
+DestinationPath=%GAMEDIR%Content/Localization/Game
 ManifestName=Game.manifest
 ArchiveName=Game.archive 
 SourceCulture=en
 CulturesToGenerate=en
-CulturesToGenerate=de-DE
+CulturesToGenerate=de
  
-;Gather text from source code
 [GatherTextStep0]
 CommandletClass=GatherTextFromSource
-IncludePaths=../../../../Github/Portfolio/KokkuEngine/Source/KokkuEngine/
+IncludePaths=%GAMEDIR%Source/KokkuEngine/
  
-;File Extensions
 SourceFileSearchFilters=*.cpp
 SourceFileSearchFilters=*.h
 SourceFileSearchFilters=*.c
@@ -20,19 +18,15 @@ SourceFileSearchFilters=*.inl
 SourceFileSearchFilters=*.mm
 SourceFileSearchFilters=*.ini
 
-;Gather text from assets
 [GatherTextStep1]
 CommandletClass=GatherTextFromAssets
 
-;Include Paths
-IncludePaths=*../../../../Github/Portfolio/KokkuEngine/Content/*
+IncludePaths=*%GAMEDIR%Content/*
 
-;Asset Extensions
 PackageExtensions=*.umap
 ;PackageExtensions=*.upk
 PackageExtensions=*.uasset
 
-;Exclude Classes
 ExcludeClasses=Texture
 ExcludeClasses=TextureCube
 ExcludeClasses=Texture2D
@@ -41,23 +35,19 @@ ExcludeClasses=Material
 
 bFixBroken=false
 
-;Write Manifest
 [GatherTextStep2]
 CommandletClass=GenerateGatherManifest
 
-;Write Archives
 [GatherTextStep3]
 CommandletClass=GenerateGatherArchive
 bPurgeOldEmptyEntries=true
 
-;Write Localized Text Resource
 [GatherTextStep4]
 CommandletClass=GenerateTextLocalizationResource
 ResourceName=Game.locres
 
-;Write Text Localization Report
 [GatherTextStep5]
 CommandletClass=GenerateTextLocalizationReport
-DestinationPath=../../../../Github/Portfolio/KokkuEngine/Content/Localization/Game/WordCounts
+DestinationPath=%GAMEDIR%Content/Localization/Game/WordCounts
 bConflictReport=true
 ConflictReportName=GameConflicts.txt
