--- a/KokkuEngine/Config/Localization/RegenerateGame.ini
+++ b/KokkuEngine/Config/Localization/RegenerateGame.ini
@@ -1,8 +1,5 @@
-[GatherTextStep0]
-CommandletClass=GenerateTextLocalizationResource
+[RegenerateResources]
 SourcePath=%GAMEDIR%Content/Localization/Game
 DestinationPath=%GAMEDIR%Content/Localization/Game
 ManifestName=Game.manifest
-CulturesToGenerate=en
-CulturesToGenerate=de
 ResourceName=Game.locres
