--- a/KokkuEngine/Config/Localization/PortableObjectExport.ini
+++ b/KokkuEngine/Config/Localization/PortableObjectExport.ini
@@ -1,12 +1,12 @@
 [CommonSettings]
 CulturesToGenerate=en
-CulturesToGenerate=de-DE
+CulturesToGenerate=de
 
 [GatherTextStep0]
 CommandletClass=InternationalizationExport
 bExportLoc=true
-SourcePath=../../../../Github/Portfolio/KokkuEngine/Content/Localization/Game
-DestinationPath=../../../../Github/Portfolio/KokkuEngine/Content/Localization/Game
+SourcePath=%GAMEDIR%Content/Localization/Game
+DestinationPath=%GAMEDIR%Content/Localization/Game
 ManifestName=Game.manifest
 ArchiveName=Game.archive
 PortableObjectName=Game.po
